--- a/backend/package.json
+++ b/backend/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "express-validator": "^6.13.0",
     "mongodb": "^4.1.4",
-    "mongoose": "^6.0.12"
+    "mongoose": "^6.0.12",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "^8.2.0"
