--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cinema-automation-backend",
+  "name": "backend",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -11,11 +11,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "express-validator": "^6.13.0",
-    "mongodb": "^4.1.4",
-    "mongoose": "^6.0.12",
+    "mongoose": "^6.0.14",
     "uuid": "^8.3.2"
-  },
-  "devDependencies": {
-    "eslint": "^8.2.0"
   }
 }
